--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,9 @@ name: miworkflow
 on:
   pull_request:
   push:
-  schedule:
-    - cron:'0 0 * * 5'
+#  schedule:
+#    - cron:'0 0 * * 5'
+
 jobs:
   build_job:
     runs_on: ubuntu-latest
